# converter

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  generate_2017.bat
editor/: CMakeLists.txt
editor/include/: D3DInit.h  YConsoleWidget.h  YEditor.h  YEditorApplication.h  YWidget.h
editor/include/WidgetUtility/: IconProvider.h  ImGuiExtension.h
editor/include/widget/: YAssetWidget.h  YViewportWidget.h
editor/src/: D3DInit.cpp  Update.cpp  YConsoleWidget.cpp  YEditor.cpp  YEditorApplication.cpp  YViewportWidget.cpp  YWidget.cpp
editor/src/WidgetUitlity/: IconProvider.cpp
editor/src/widget/: YAssetWidget.cpp  YConsoleWidget.cpp  YViewportWidget.cpp
engine/: CMakeLists.txt
engine/include/Engine/: CoreGlobals.h  DynamicRHIResourceArray.h  EnumAsByte.h  IntegerSequence.h  List.h  LockFreeFixedSizeAllocator.h  LockFreeList.h  PlatformMacro.h  ResourceArray.h  StaticArray.h  TaskGraphCommon.h  TaskGraphInterfaces.h  ThreadSafeCounter.h  TypeHash.h  YArchive.h  YCamera.h  YCameraController.h  YCanvas.h  YCanvasUtility.h  YCommonHeader.h  YEngine.h  YFile.h  YInputManager.h  YLight.h  YLog.h  YMaterial.h  YMemoryArchive.h  YNocopyable.h  YPackedNormal.h  YPixelFormat.h  YPrimitiveElement.h  YRawMesh.h  YReferenceCount.h  YRenderScene.h  YSkeletonMesh.h  YStaticMesh.h  YViewPort.h  YWindowEventManger.h
engine/include/Math/: Box2D.h  Float16.h  Float16Color.h  Float32.h  IntPoint.h  IntRect.h  IntVector.h  NumericLimits.h  Vector2DHalf.h  YBox.h  YColor.h  YMath.h  YMatrix.h  YQuaterion.h  YRay.h  YRotator.h  YTransform.h  YVector.h
engine/include/MeshUtility/: Allocator2D.h  DisjointSet.h  LayoutUV.h  OverlappingCorners.h  YMeshOperation.h
engine/include/Platform/: Event.h  EventPool.h  GenericPlatformAffinity.h  GenericPlatformTime.h  IQueuedWork.h  QueuedThreadPool.h  Runnable.h  RunnableThread.h  ScopeLock.h  ScopedEvent.h  SingleThreadRunnable.h  ThreadManager.h  ThreadSafeCounter.h  ThreadSingleton.h  TlsAutoCleanup.h  YGenericPlatformAtomics.h  YGenericPlatformMisc.h  YGenericPlatformProcess.h  YGenericPlatformTLS.h  YPlatfomMisc.h  YPlatform.h  YPlatformAffinity.h  YPlatformAtomics.h  YPlatformCriticalSection.h  YPlatformProcess.h  YPlatformTime.h
engine/include/RHI/: BoundShaderStateCache.h  DynamicRHI.h  GPUProfiler.h  MultiGPU.h  PipelineFileCache.h  PipelineStateCache.h  RHI.h  RHICommandList.h  RHICommandList.inl  RHICommandListCommandExecutes.inl  RHIContext.h  RHIDefinitions.h  RHIGPUReadback.h  RHIResources.h  RHIStaticStates.h  RHIUtilities.h
engine/include/Render/: RenderCommandFence.h  RenderCore.h  RenderResource.h  RenderUtils.h  UniformBuffer.h  YForwardRenderer.h  YPixelFormat.h  YRenderInterface.h  YRenderThread.h
engine/include/SObject/: SActor.h  SComponent.h  SMaterial.h  SObject.h  SObjectManager.h  SStaticMesh.h  SStaticMeshComponent.h  STexture.h  SWorld.h
engine/include/ShaderCore/: ShaderCore.h
engine/include/Template/: Template.h
engine/include/Utility/: Crc.h  LayoutUV.h  MemStack.h  OverlappingCorners.h  ScopeLock.h  SecureHash.h  YAverageSmooth.h  YJsonHelper.h  YPath.h  YPickupOps.h  YStringFormat.h
engine/src/Engine/: CoreGlobals.cpp  LockFreeList.cpp  TaskGraph.cpp  TaskGraphCommon.cpp  YArchive.cpp  YCamera.cpp  YCameraController.cpp  YCanvas.cpp  YCanvasUtility.cpp  YEngine.cpp  YFile.cpp  YInputManager.cpp  YLight.cpp  YLog.cpp  YMaterial.cpp  YPrimitiveElement.cpp  YRawMesh.cpp  YRenderScene.cpp  YSkeletonMesh.cpp  YStaticMesh.cpp  YViewPort.cpp  YWindowEventManger.cpp
engine/src/Math/: Box2D.cpp  YBox.cpp  YColor.cpp  YMath.cpp  YMatrix.cpp  YQuaterion.cpp  YRay.cpp  YRotator.cpp  YTransform.cpp  YVector.cpp
engine/src/MeshUtility/: Allocator2D.cpp  LayoutUV.cpp  NvTriStripObjects.cpp  OverlappingCorners.cpp  mikktspace.c  nvtess.cpp
engine/src/Platform/: GenericPlatformMisc.cpp  GenericPlatformTime.cpp  ThreadingBase.cpp
engine/src/RHI/: BoundShaderStateCache.cpp  DynamicRHI.cpp  GPUProfiler.cpp  PipelineFileCache.cpp  PipelineStateCache.cpp  RHI.cpp  RHICommandList.cpp  RHIGPUReadback.cpp  RHIUtilities.cpp
engine/src/Render/: RenderResource.cpp  RenderUtils.cpp  YForwardRenderer.cpp  YRenderCore.cpp  YRenderInterface.cpp  YRenderThread.cpp
engine/src/SObject/: SActor.cpp  SComponent.cpp  SMaterial.cpp  SObject.cpp  SObjectManager.cpp  SStaticMesh.cpp  SStaticMeshComponent.cpp  STexture .cpp  SWorld.cpp
engine/src/Shader/: CPUSKin.hlsl  Canvas.hlsl  GPUSkin.hlsl  StaticMesh.hlsl  StaticMesh_hi.hlsl  StaticMesh_medium.hlsl
engine/src/Utility/: Allocator2D.cpp  Crc.cpp  LayoutUV.cpp  MemStack.cpp  NvTriStrip.cpp  NvTriStripObjects.cpp  (+8 more)
game/: CMakeLists.txt  generate_proj.bat
game/include/: YGame.h
game/src/: YGame.cpp
importer/: CMakeLists.txt
importer/include/: YFbxImporter.h  YFbxMaterial.h  YFbxPostProcess.h  YFbxUtility.h
importer/include/MeshUtility/: nvtess.h
importer/src/: YFbxAnimationImporter.cpp  YFbxImporter.cpp  YFbxMaterial.cpp  YFbxPostProcess.cpp  YFbxPostProcess.h.cpp  YFbxUtility.cpp  YSkeletonImporter.cpp  YSkeletonMeshImporter.cpp  YStaticMeshImporter.cpp
importer/src/MeshUtility/: NvTriStrip.cpp  nvtess.cpp
include/: D3DInit.h  YFbxImporter.h  YFbxUtility.h  YLog.h  YMaterial.h  YMath.h  YMatrix.h  YQuaterion.h  YRawMesh.h  YRotator.h  YVector.h
include/Engine/: YCamera.h  YCameraController.h  YCanvas.h  YInputManager.h  YLog.h  YRawMesh.h  YStaticMesh.h
include/Importer/: YFbxImporter.h  YFbxUtility.h
include/Math/: YMath.h  YMatrix.h  YQuaterion.h  YRotator.h  YVector.h
resource/map/: world.json
src/: D3DInit.cpp  Update.cpp  YFbxImporter.cpp  YFbxUtility.cpp  YLog.cpp  YMaterial.cpp  YMath.cpp  YMatrix.cpp  YQuaterion.cpp  YRawMesh.cpp  YRotator.cpp  YStaticMeshImporter.cpp  YVector.cpp  main.cpp
src/Engine/: YCamera.cpp  YCameraController.cpp  YCanvas.cpp  YCanvasUtility.cpp  YInputManager.cpp  YLog.cpp  YMaterial.cpp  YRawMesh.cpp  YStaticMesh.cpp
src/Importer/: YFbxImporter.cpp  YFbxUtility.cpp  YStaticMeshImporter.cpp
src/Math/: YMath.cpp  YMatrix.cpp  YQuaterion.cpp  YRotator.cpp  YVector.cpp
src/Shader/: StaticMesh.hlsl
(+94 files in other folders)
